--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                                                     تطوير <b>  ,صيانة</b>,تدوير</h2>
                                                     <p>
                                                         الامان و الاسرع في التصميم و الصيانة</p>
-                                                    <a href=""> تصفح خدماتنا <i class="lni lni-arrow-right"></i></a>
+                                                    <a href="">  حمل تطبيقنا الان <i class="lni lni-arrow-right"></i></a>
                                                 </div>
                                                 <!-- end inner -->
 
@@ -1391,7 +1391,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="footer-bottom"> <span>© 2020 جميع حقوق النشر و الملكية مع شركة دوت فكس</span>
+                    <div class="footer-bottom"> <span>© 2022 جميع حقوق النشر و الملكية مع شركة دوت فكس</span>
 
                         
                     </div>
