--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
 
                                                 <a href="" class="sector-box ">
 	
-	<span>اب</span> <i class="lni lni-arrow-right"></i>
+	<span>قريبا اب</span> <i class="lni lni-arrow-right"></i>
   
  
 
@@ -779,7 +779,7 @@
 
                                                 <a href="" class="sector-box ">
 	
-	<span>عدن</span> <i class="lni lni-arrow-right"></i>
+	<span>عدن قريبا</span> <i class="lni lni-arrow-right"></i>
   
  
 
@@ -796,7 +796,7 @@
 
                                                 <a href="" class="sector-box ">
 	
-	<span>تعز</span> <i class="lni lni-arrow-right"></i>
+	<span>تعز قريبا</span> <i class="lni lni-arrow-right"></i>
   
  
 
@@ -811,7 +811,7 @@
 
                                                 <a href="" class="sector-box ">
 	
-	<span>حضرموت</span> <i class="lni lni-arrow-right"></i>
+	<span>حضرموت قريبا</span> <i class="lni lni-arrow-right"></i>
   
  
 
@@ -826,7 +826,7 @@
 
                                                 <a href="" class="sector-box ">
 	
-	<span>ماليزيا</span> <i class="lni lni-arrow-right"></i>
+	<span>خارج اليمن</span> <i class="lni lni-arrow-right"></i>
   
  
 
