--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <title>دوت فكس للصيانة و التطوير</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Download the best Creative Portfolio HTML Template in 2022" />
-    <meta name="author" content="ClaPat Studio">
+    <meta name="description" content="دوت فكس للتطوير " />
+    <meta name="author" content="تم تصميم الموقع بواسطة الحسن المزحاني ">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
     <link href="style.css" rel="stylesheet" />
